--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
   <% if user_signed_in? %>
     <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+    <%= "ログイン中(#{current_user.email})"%>
   <% else %>
     <%= link_to "Log in", new_user_session_path %>
     <%= link_to "Sign up", new_user_registration_path %>
@@ -20,5 +21,6 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    <%= any_login_here if defined?(AnyLogin) %>
   </body>
 </html>
