--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
-        <td><%= product.amount %></td>
+        <td><%= formatted_amount product.amount %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
