--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,7 +10,7 @@
 
 <p>
   <strong>Amount:</strong>
-  <%= @product.amount %>
+  <%=formatted_amount @product.amount %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
