--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,5 +13,9 @@
   <%=formatted_amount @product.amount %>
 </p>
 
+<div>
+  <%= link_to '購入', product_purchase_path(@product) %>
+</div>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
