feat: Stripe Elements JSを使用した支払いの作成

--- a/app/views/purchases/show.html.erb
+++ b/app/views/purchases/show.html.erb
@@ -11,7 +11,7 @@
 
   <div>
     <label>クレジットカードに記載されている名前</label>
-    <% form.text_field :name_on_card %>
+    <%= form.text_field :name_on_card %>
   </div>
 
   <div>
