--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,8 +6,14 @@
 </p>
 
 <p>
-  <strong>Video url:</strong>
-  <%= @movie.video_url %>
+  <strong>Video</strong>
+  <div>
+    <% if current_user&.subscribed? %>
+      <%= image_tag @movie.video_url, width: 400 %>
+    <% else %>
+      <p>映画を見るには契約してください</p>
+    <% end %>
+  </div>
 </p>
 
 <%= link_to 'Edit', edit_movie_path(@movie) %> |
