--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+  <%= link_to 'Top', root_path %>
   <% if user_signed_in? %>
     <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <%= "ログイン中(#{current_user.email})"%>
