--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -3,6 +3,6 @@
 <% @plans.each do |plan| %>
   <p><%= plan.name %></p>
   <p><%= formatted_amount (plan.amount) %> / <%= plan.interval %></p>
-  <%= link_to "契約する", "#" %>
+  <%= link_to "契約する", new_subscription_path(plan_id: plan.id )%>
   <hr>
 <% end %>
